# gs_usb2can

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  LICENSE  README.md  gs_usb2can.ioc
Core/Src/: gpio.c  main.c  usb_drd_fs.c
Project/app/: CMakeLists.txt  STM32G0B1XX_FLASH.ld
Project/app/Core/Inc/: stm32g0xx_it.h
Project/app/Core/Src/: fdcan.c  stm32g0xx_it.c  usb_drd_fs.c
Project/app/gs_usb/: gs_usb.c  gs_usb.h
Project/app/usb/: usb_core.c  usb_core.h  usb_def.h  usb_desc.c  usb_desc.h  usb_platform.c
Project/bootloader/: APP_PARAM_README.md  CMakeLists.txt  DOWNLOAD_PROTOCOL.md  README.md
Project/bootloader/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
Project/bootloader/examples/: app_param_example.c
Project/bootloader/inc/: app_param.h  bootloader.h  bootloader_config.h  bootloader_entry.h  download_protocol.h  hw_interface.h  stm32g0xx_hal_conf.h
Project/bootloader/scripts/: download.py
Project/bootloader/src/: app_param.c  bootloader.c  download_protocol.c  hw_interface_stm32.c  main.c
Project/bootloader/web_flasher/: index.html  script.js  styles.css  test_crc32.js
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
